# equity-stat-arb

./: .gitignore  CLAUDE.md  README.md  SCHWAB_API_PRIMER.md  pyproject.toml
config/: default.yaml
docker/: .env.example  Dockerfile  docker-compose.yaml  entrypoint.sh
scripts/: run_backtest.py  smoke_test_data_layer.py  validate_discovery.py
src/stat_arb/: __main__.py  cli.py  logging_config.py
src/stat_arb/backtest/: results.py  sim_broker.py  walk_forward_bt.py
src/stat_arb/config/: constants.py  settings.py
src/stat_arb/data/: db.py  fmp_client.py  price_repo.py  schemas.py  schwab_client.py  universe.py
src/stat_arb/discovery/: cointegration.py  hedge_ratio.py  ou_process.py  pair_discovery.py  pair_filter.py
src/stat_arb/engine/: rolling_scheduler.py  signals.py  spread.py  stat_arb_engine.py  walk_forward.py
src/stat_arb/execution/: broker_base.py  order_builder.py  (+4 more)
tests/: conftest.py
tests/backtest/: test_walk_forward_bt.py
tests/integration/: test_db.py
tests/unit/: test_activity_feed.py  test_backtest.py  test_cli.py  test_cointegration.py  test_config.py  test_data_provider_events.py  test_earnings_blackout.py  test_engine_events.py  test_engine_rolling.py  test_execution.py  test_fmp_client.py  test_hedge_ratio.py  test_live_runner.py  test_ou_process.py  test_pair_discovery.py  test_pair_filter.py  test_rebalancer.py  test_reporting.py  test_risk.py  test_risk_earnings.py  test_risk_rolling.py  test_rolling_scheduler.py  test_signals.py  test_spread.py  test_stat_arb_engine.py  test_tui.py  test_universe.py  test_walk_forward.py
(+25 files in other folders)
