[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[project]
name = "stat-arb"
version = "0.1.0"
description = "Equity pairs trading system with walk-forward cointegration discovery"
requires-python = ">=3.11"
dependencies = [
    "schwabdev>=3.0,<4.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0,<3.0",
    "pandas>=2.0,<3.0",
    "numpy>=1.24,<3.0",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "pykalman>=0.9.7",
    "joblib>=1.3.0",
    "matplotlib>=3.7",
    "click>=8.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]
postgres = [
    "psycopg2-binary>=2.9",
]

[project.scripts]
stat-arb = "stat_arb.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/stat_arb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
